@@ -19,6 +19,7 @@ package org.apache.lucene.store;
  
 import java.io.IOException;
 import java.nio.ByteBuffer;
+import java.nio.MappedByteBuffer;
 import java.nio.channels.ClosedChannelException; // javadoc @link
 import java.nio.channels.FileChannel;
 import java.nio.channels.FileChannel.MapMode;
@@ -86,6 +87,8 @@ import org.apache.lucene.util.Constants;
  */
 public class MMapDirectory extends FSDirectory {
   private boolean useUnmapHack = UNMAP_SUPPORTED;
+  private boolean preload;
+
   /** 
    * Default max chunk size.
    * @see #MMapDirectory(Path, LockFactory, int)
@@ -198,6 +201,24 @@ public class MMapDirectory extends FSDirectory {
   }
   
   /**
+   * Set to {@code true} to ask mapped pages to be loaded
+   * into physical memory on init. The behavior is best-effort 
+   * and operating system dependent.
+   * @see MappedByteBuffer#load
+   */
+  public void setPreload(boolean preload) {
+    this.preload = preload;
+  }
+  
+  /**
+   * Returns {@code true} if mapped pages should be loaded.
+   * @see #setPreload
+   */
+  public boolean getPreload() {
+    return preload;
+  }
+  
+  /**
    * Returns the current mmap chunk size.
    * @see #MMapDirectory(Path, LockFactory, int)
    */
@@ -237,11 +258,16 @@ public class MMapDirectory extends FSDirectory {
           ? chunkSize
               : (length - bufferStart)
           );
+      MappedByteBuffer buffer;
       try {
-        buffers[bufNr] = fc.map(MapMode.READ_ONLY, offset + bufferStart, bufSize);
+        buffer = fc.map(MapMode.READ_ONLY, offset + bufferStart, bufSize);
       } catch (IOException ioe) {
         throw convertMapFailedIOException(ioe, resourceDescription, bufSize);
       }
+      if (preload) {
+        buffer.load();
+      }
+      buffers[bufNr] = buffer;
       bufferStart += bufSize;
     }
     
